[gd_scene load_steps=15 format=3 uid="uid://dke7t1d3vgqq7"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_0lcs8"]
[ext_resource type="PackedScene" uid="uid://ciux38k0bf1a" path="res://scenes/cat.tscn" id="1_p36ap"]
[ext_resource type="PackedScene" uid="uid://dst1yjwh8x277" path="res://scenes/mouse.tscn" id="2_ne4k0"]
[ext_resource type="PackedScene" uid="uid://dpe2wkyqgurtw" path="res://scenes/viewport.tscn" id="3_cgifp"]
[ext_resource type="PackedScene" uid="uid://to10rp3j7j48" path="res://scenes/hud.tscn" id="4_7xut6"]
[ext_resource type="Texture2D" uid="uid://pbhvwd0wab54" path="res://sprites/coeur.png" id="6_ir1im"]
[ext_resource type="Texture2D" uid="uid://cd4mjtkhuvqk7" path="res://sprites/fripz.png" id="7_oj6di"]
[ext_resource type="AudioStream" uid="uid://bavrtq51x5h1i" path="res://sound/game_over.ogg" id="8_0lu46"]
[ext_resource type="AudioStream" uid="uid://cbrqjdftgl4hf" path="res://sound/background2.mp3" id="9_6ip7y"]
[ext_resource type="Script" path="res://scenes/BackgroundMusic.gd" id="9_xx5pt"]

[sub_resource type="Curve2D" id="Curve2D_lsdnp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Animation" id="Animation_02opm"]
resource_name = "Game_over"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver_anim:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver_anim:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 9.42478, 18.8496]
}

[sub_resource type="Animation" id="Animation_fqnmc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver_anim:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.09931, 1.24783)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver_anim:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nncuw"]
_data = {
"Game_over": SubResource("Animation_02opm"),
"RESET": SubResource("Animation_fqnmc")
}

[node name="Main" type="Node"]
script = ExtResource("1_0lcs8")
mob_scene = ExtResource("2_ne4k0")

[node name="Viewport" parent="." instance=ExtResource("3_cgifp")]

[node name="Cat" parent="." instance=ExtResource("1_p36ap")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BombTimer" type="Timer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 500)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lsdnp")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_7xut6")]

[node name="HeartsContainer" type="HBoxContainer" parent="."]
texture_filter = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 192.0
offset_bottom = 56.0

[node name="Heart1" type="TextureRect" parent="HeartsContainer"]
texture_filter = 1
custom_minimum_size = Vector2(-5, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("6_ir1im")
expand_mode = 3
stretch_mode = 4

[node name="Heart2" type="TextureRect" parent="HeartsContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_ir1im")
expand_mode = 3
stretch_mode = 4

[node name="Heart3" type="TextureRect" parent="HeartsContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_ir1im")
expand_mode = 3
stretch_mode = 4

[node name="GameOver_anim" type="Sprite2D" parent="."]
position = Vector2(238, 360)
scale = Vector2(1.09931, 1.24783)
texture = ExtResource("7_oj6di")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver_anim"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nncuw")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="GameOver_anim"]
stream = ExtResource("8_0lu46")
attenuation = 0.0426887

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_6ip7y")
volume_db = 6.154
panning_strength = 0.8
script = ExtResource("9_xx5pt")

[connection signal="hit" from="Cat" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_bomb_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="animation_finished" from="GameOver_anim/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
